# EZFF2

./: .gitignore  NEW_bayes.py  bayesopt.py  parse.py  pyproject.toml  ruff.toml  test_elastic_modulus  test_elastic_modulus.py
ezff/: __init__.py  ffio.py
ezff/interfaces/: base_parser.py  cif_parser.py  gulp.py  gulp_parser.py  test_newinterfaface.ipynb
ezff/parsers/: base_parser.py  cif_parser.py  gulp_parser.py
ezff/utils/: software_runner.py
test_bulk_modulus/: test_bulk_modulus.py
test_parse/: test_phonon_gamma.py  test_phonon_kpoints.py  test_shear_modulus.py  test_young_modulus.py
tests/parsers/: test_cif.py
